# outpost-agent

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: artifact_uploader.rs  capabilities.rs  config.rs  credentials.rs  lib.rs  main.rs  pin_manager.rs  probe.rs  run_executor.rs  task_runner.rs  tls_pinning.rs  ws_client.rs
